@@ -1,7 +1,7 @@
 package OpenGuides::CGI;
 use strict;
 use vars qw( $VERSION );
-$VERSION = '0.01';
+$VERSION = '0.02';
 
 use Carp qw( croak );
 use CGI::Cookie;
@@ -29,7 +29,8 @@ This documentation is probably only useful to OpenGuides developers.
       config                 => $config,
       username               => "Kake",
       include_geocache_link  => 1,
-      preview_above_edit_box => 1
+      preview_above_edit_box => 1,
+      latlong_traditional    => 1
   );
 
   my $wiki = OpenGuides::Utils->make_wiki_object( config => $config );
@@ -54,7 +55,8 @@ This documentation is probably only useful to OpenGuides developers.
       config                 => $config,
       username               => "Kake",
       include_geocache_link  => 1,
-      preview_above_edit_box => 1
+      preview_above_edit_box => 1,
+      latlong_traditional    => 1
   );
 
 Croaks unless a L<Config::Tiny> object is supplied as C<config>.
@@ -71,7 +73,8 @@ sub make_prefs_cookie {
         -name  => $cookie_name,
 	-value => { user   => $args{username},
 		    gclink => $args{include_geocache_link},
-                    prevab => $args{preview_above_edit_box} }
+                    prevab => $args{preview_above_edit_box},
+                    lltrad => $args{latlong_traditional} }
     );
     return $cookie;
 }
@@ -100,7 +103,8 @@ sub get_prefs_from_cookie {
     }
     return ( username               => $data{user} || "Anonymous",
              include_geocache_link  => $data{gclink} || 0,
-             preview_above_edit_box => $data{prevab} || 0  );
+             preview_above_edit_box => $data{prevab} || 0,
+             latlong_traditional    => $data{lltrad} || 0  );
 }
 
 sub _get_cookie_name {
